--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
 
         <meta charset=”UTF-8”>
-
+        <meta name="description" content="Online Shop for The August Vineyards & Winery">
+        <meta name="keywords" content="wine, San Luis Obispo, vineyard, The August Wine, online shopping">
+        <meta name="author" content="Margarita Ku">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
      <title>The August Wines</title>
         <link rel="stylesheet" type="text/css" href=styles-contact.css>
